<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">
    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="@dimen/userIconDim"
        android:layout_height="@dimen/userIconDim"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/tendp"
        android:contentDescription=""
        android:padding="@dimen/tendp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_launcher"
        tools:ignore="ContentDescription,RtlHardcoded" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:padding="@dimen/threeDp"
        android:text="@string/bob"
        android:textSize="@dimen/fourteenPoint" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserName"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:padding="@dimen/oneDp"
        android:text="@string/bobs_tweet"
        android:textSize="@dimen/twelvePoint" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvBody"
        android:layout_marginLeft="20dp"
        android:layout_toEndOf="@+id/tvUserName"
        android:layout_toRightOf="@+id/tvUserName"
        android:padding="3dp"
        android:text="@string/real_name"
        android:textSize="@dimen/fourteenPoint"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tvTimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvBody"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="3dp"
        android:text="@string/relTiimeStamp"
        android:textSize="@dimen/fourteenPoint" />

    <com.codepath.apps.mysimpletweets.viewholders.ResizableImageView
        android:id="@+id/ivPhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignEnd="@+id/tvTimeStamp"
        android:layout_below="@+id/tvBody"
        android:layout_marginEnd="50dp"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:scaleType="fitXY"
        android:src="@drawable/my_placeholder"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage" />

</RelativeLayout>