<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="@dimen/userIconDim"
        android:layout_height="@dimen/userIconDim"
        android:contentDescription=""
        android:padding="@dimen/tendp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_launcher"
        tools:ignore="ContentDescription,RtlHardcoded"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:padding="@dimen/threeDp"
        android:text="@string/bob"
        android:textSize="@dimen/fourteenPoint" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserName"
        android:layout_marginLeft="10dp"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:autoLink="web"
        android:clickable="true"
        android:linksClickable="true"
        android:textColorLink="@color/linkcolor"
        android:padding="@dimen/oneDp"
        android:text="@string/bobs_tweet"
        android:textSize="@dimen/twelvePoint" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/real_name"
        android:textSize="@dimen/fourteenPoint"
        tools:ignore="RtlHardcoded"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/tvTimeStamp"
        android:layout_toStartOf="@+id/tvTimeStamp" />

    <TextView
        android:id="@+id/tvTimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvBody"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="3dp"
        android:text="@string/relTiimeStamp"
        android:textSize="@dimen/fourteenPoint" />

    <RelativeLayout
        android:id="@+id/twActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBody"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/ivProfileImage"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivReply"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_image_reply"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tvRetweetCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:clickable="false"
            android:text="5" />

        <ImageView
            android:id="@+id/ivRetweet"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@id/tvRetweetCount"
            android:src="@drawable/ic_image_retweet" />

        <TextView
            android:id="@+id/tvStarCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:clickable="false"
            android:text="1" />

        <ImageView
            android:id="@+id/ivStar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignBottom="@+id/ivReply"
            android:layout_toLeftOf="@id/tvStarCount"
            android:src="@drawable/ic_image_star" />
    </RelativeLayout>



</RelativeLayout>